--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,66 @@
+$days-quantity: 31;
+$day-size: 100px;
+$gap-size: 1px;
+
 body {
   margin: 0;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
 }
+
+.calendar {
+  margin: 0 auto;
+  padding: 10px;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  max-width: ($day-size + $gap-size) * 7;
+
+  $days-of-week: mon 0,
+    tue 1,
+    wed 2,
+    thu 3,
+    fri 4,
+    sat 5,
+    sun 6;
+
+  @each $name, $number in $days-of-week {
+    &--start-day-#{$name} &__day:first-child {
+      margin-left: $number * ($day-size + $gap-size);
+    }
+  }
+
+  @for $days from 28 through 31 {
+    &--month-lengh-#{$days} &__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+    width: $day-size;
+    height: $day-size;
+    border: 1px solid #000;
+    background-color: #eee;
+
+    transition: background-color 0.5s, transform 0.5s;
+
+    @for $day from 1 through $days-quantity {
+      &:nth-child(#{$day}):before {
+        content: '#{$day}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
+}
+
