--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,14 @@
-$cell-size: 100px;
-$flex-gap: 1px;
-$day-of-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
-
-body {
-  margin: 0;
-}
+@import './utils/variables';
+@import './utils/reset';
 
 .calendar {
-    display: flex;
-    flex-wrap: wrap;
-    gap: $flex-gap;
-    box-sizing: border-box;
-    margin: 0 auto;
-    width: 7 * $cell-size;
-    padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $flex-gap;
+
+  margin: 0 auto;
+  padding: 10px;
+  width: 7 * ($cell-size + $flex-gap);
 
   &__day {
     display: flex;
@@ -23,14 +18,14 @@ body {
     box-sizing: border-box;
     width: $cell-size;
     height: $cell-size;
-    background-color: #eee;
-    border: 1px solid #000;
+    background-color: $cell-color;
+    border: 1px solid $border-color;
 
-    transition: 0.5s;
+    transition: background-color 0.5s, transform 0.5s;
 
     &:hover {
       cursor: pointer;
-      background-color: pink;
+      background-color: $cell-color-hover;
       transform: translateY(-20px);
     }
   }
