--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
   margin: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 $squaresize: 100px;
@@ -9,12 +11,25 @@ $fonsize: 30px;
 $month-length: 29;
 $start-day: sun;
 
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+}
+
 .calendar {
   padding: 10px;
   width: $squaresize * 7 + 6px;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
+  vertical-align: center;
 
   &__day {
     width: $squaresize;
