--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
-body {
-  margin: 0;
-}
+@import './blocks/resets';
+@import './blocks/variables';
+@import './blocks/calendar';
+@import './blocks/loops';
