add task solution

--- a/src/styles/blocks/loops.scss
+++ b/src/styles/blocks/loops.scss
@@ -10,7 +10,7 @@
   $days-of-week: (mon: 0, tue: 104px, wed: 204px, thu: 304px, fri: 404px, sat: 504px, sun: 604px);
 
   @each $day, $retreat in $days-of-week {
-    .start-#{$day} {
+    .calendar--start-#{$day} {
       margin-left: #{$retreat};
     }
   }
