--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,56 +1,3 @@
-$columns: 7;
-$cell-size: 100px;
-$gap: 1px;
-$days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5 , sun 6;
-$max-width: $cell-size * $columns + $gap * $columns;
-
-body {
-  margin: 0;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: $gap;
-  padding: 10px;
-  width: $max-width;
-
-  &__day {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    height: $cell-size;
-    width: $cell-size;
-    box-sizing: border-box;
-    border: 1px solid #eee;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    color: black;
-    transition: transform 500ms;
-
-    &:hover {
-      cursor: pointer;
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-  }
-
-  @for $day from 1 through 31 {
-    &__day:nth-child(#{$day})::before {
-      content: '#{$day}';
-    }
-  }
-
-  @each $day, $index in $days {
-    &--start-day--#{$day} :first-child {
-      margin-left: calc(($cell-size + $gap) * $index);
-    }
-  }
-
-  @for $m from 28 through 31 {
-    &--month-length--#{$m} :nth-child(n + #{$m + 1}) {
-      display: none;
-    }
-  }
-}
+@import './utils/variables';
+@import './utils/reset';
+@import './blocks/calendar'
