--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,13 @@
 @import './utils/variables';
 @import './utils/mixins';
-@import './blocks/page';
 @import './blocks/calendar';
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+body {
+  margin: 0;
+}
 
