--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,15 +1,13 @@
+$font-family-primary: Arial, Helvetica, sans-serif;
+$transition-duration: 0.5s;
+$transform-height: -20px;
+$hover-color: pink;
 $day-size: 100px;
 $day-digits-size: 30px;
 $day-background-color: #eee;
 $day-border-color: #000;
 $day-border-size: 1px;
 $indentation-between-days: 1px;
-$calendar-paddings: 10px;
-$calendar-text-color: #000;
-$font-family-primary: Arial, Helvetica, sans-serif;
-$transition-duration: 0.5s;
-$transform-height: -20px;
-$hover-color: pink;
 $week-days: mon 0,
   tue ($day-size + $indentation-between-days)px,
   wed ($day-size * 2 + $indentation-between-days * 2)px,
@@ -17,3 +15,11 @@ $week-days: mon 0,
   fri ($day-size * 4 + $indentation-between-days * 4)px,
   sat ($day-size * 5 + $indentation-between-days * 5)px,
   sun ($day-size * 6 + $indentation-between-days * 6)px;
+$calendar-paddings: 10px;
+$calendar-columns: 7;
+$calendar-inline-paddings: $calendar-paddings * 2;
+$calendar-block-paddings: $calendar-paddings * 2;
+$calendar-text-color: #000;
+
+
+
