--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,13 @@
 @import './utils/variables';
 
 body {
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 
   font-family: Arial, sans-serif;
   font-size: 30px;
+  padding: 10%;
 }
 
 * {
@@ -49,7 +49,7 @@ body {
   @each $day, $i in $week-days {
     &--start-day--#{$day} &__day:first-child {
       margin-left: $i * ($cell-size + $gap);
-    }
+    };
   }
 
   @for $gth from 28 through 31 {
