--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,13 @@
-$day-size: 100px;
-$day-gap: 1px;
-$block-padding: 10px;
+@import 'variables';
 
 @font-face {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
 }
 
@@ -19,7 +20,6 @@ body {
   width: $day-size * 7 + $day-gap * 6 + $block-padding * 2;
   padding: $block-padding;
 
-
   flex-wrap:wrap;
 
   &__day {
@@ -27,20 +27,41 @@ body {
     justify-content: center;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid $color-border;
     width: $day-size;
     height: $day-size;
     box-sizing: border-box;
 
-    background-color: #eee;
+    background-color: $calendar-block-color;
 
     font-size: 30px;
+
+    &:hover {
+      cursor:pointer;
+      transform: translateY(-20px);
+
+      background-color: $calendar-block-color-hover;
+    }
 
     @for $day from 1 through 31 {
       &:nth-child(#{$day})::before {
         content: '#{$day}';
         display: block;
       }
+    }
+  }
+
+  @each $month, $days in $months {
+    @for $extra-day from $days through 31 {
+      &--#{$month} > &__day::nth-child(#{$extra-day + 1}) {
+        display:none;
+      }
+    }
+  }
+
+  @each $day, $index in $first-day {
+    &--start-#{$day} > &__day:first-child {
+      margin-left: ($day-gap + $day-size) * $index;
     }
   }
 }
