--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,7 +59,7 @@ body {
   }
 
   @each $start-day in $days-order {
-    &.start-#{$start-day} {
+    &--start-#{$start-day} {
       .calendar__day {
         margin-left: ($start-day - 1) + ($cell-size + 1px + $gap);
       }
@@ -67,7 +67,7 @@ body {
   }
 
   @for $month-length from 28 through 31 {
-    &.month-length-#{$month-length} {
+    &--month-length-#{$month-length} {
       .calendar__day:nth-child(n + #{$month-length + 1}) {
         display: none;
       }
