--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,13 +54,20 @@ body {
     }
   }
 
-  @each $mounth, $days in $mounthes {
-    @for $extra-day from $days through 31 {
-      &--#{$mounth} > &__day:nth-child(#{$extra-day + 1}) {
-        display: none;
-      }
+  // Notes: other way to figure out the last day modifier
+  // @each $mounth, $days in $mounthes {
+  //   @for $extra-day from $days through 31 {
+  //     &--#{$mounth} > &__day:nth-child(#{$extra-day + 1}) {
+  //       display: none;
+  //     }
+  //   }
+  // }
+
+  @for $day from 28 through 31 {
+    &--length-#{$day} > &__day:nth-child(n + #{$day + 1}) {
+      display: none;
     }
-  }
+  } // length-29
 
   @each $day, $index in $first-day {
     &--start-#{$day} > &__day:first-child {
