rename varible and add empty line

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './var';
+@import './variable.scss';
 
 html {
   font-family: Arial, Helvetica, sans-serif;
@@ -68,4 +68,3 @@ body {
     }
   }
 }
-
