--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,67 @@
-body {
-  margin: 0;
+$block-size: 100px;
+$columns: 7;
+$gap: 1px;
+$padding: 10px;
+$starting-day: 'thursday';
+$days: 'monday tuesday wednesday thursday friday saturday sunday';
+$day-number: list-index($days, $starting-day) + 1;
+$month-length: 28;
+
+.container {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  max-width: calc(#{$columns} * #{$block-size} + (#{$columns} - 1) * #{$gap} + #{$padding * 2});
+  margin: 50px auto;
+}
+
+.block {
+  width: $block-size;
+  height: $block-size;
+  background-color: #eee;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  border: 1px solid darkgrey;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: transform 0.3s;
+
+  &:hover {
+    transform: scale(1.05);
+    background-color: #e4e4e4;
+    cursor: pointer;
+  }
+
+  &::before {
+    content: attr(data-day);
+  }
+}
+
+@for $i from 1 through 31 {
+  .block:nth-child(#{$i}) {
+    margin-bottom: $gap;
+    margin-right: $gap;
+
+    &:nth-child(7n) {
+      margin-right: 0;
+    }
+
+    &::before {
+      content: '#{$i}';
+    }
+  }
+}
+
+@for $i from $month-length through 31 {
+  .block:nth-child(#{$i + 1}) {
+    display: none;
+  }
+}
+
+.container .block:nth-child(1) {
+  margin-left: calc(($block-size + 2 * $gap) * ($day-number - 1));
 }
