fixed task issues

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -9,7 +9,7 @@
   }
 
   .calendar {
-    width: $calendar-width;
+    width: 7 * ($days-width + $calendar-gap) + 20; //20 --- padding left + right
     display: flex;
     gap: 1px;
     flex-wrap: wrap;
