--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,6 +1,7 @@
   $days-width: 100px;
   $days-heigth: 100px;
   $days-bgcolor: #eee;
-  $calendar-width: 708px;
   $days-hover-bgcolor: pink;
   $days-border-color: black;
+  $calendar-gap: 1px;
+
