--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
@@ -11,7 +15,7 @@ body {
 .container {
   margin: 5px auto;
   padding: $padding-mounth;
-  width: 7 * $day-box-size + 6 * $gap-mounth;
+  width: $days-in-week * $day-box-size + $gaps-in-calendar * $gap-mounth;
   border: 2px solid tomato;
 }
 
@@ -32,7 +36,6 @@ body {
     height: $day-box-size;
     border: $border-day-box solid black;
     background-color: $background-main-color;
-    box-sizing: border-box;
 
     font-size: 30px;
 
