--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -1,11 +1,21 @@
+@use "sass:map";
+
+$starting-day: 'friday';
+$month-length: 29;
 $block-size: 100px;
 $columns: 7;
 $gap: 1px;
 $padding: 10px;
-$starting-day: 'thursday';
-$days: 'monday tuesday wednesday thursday friday saturday sunday';
-$day-number: list-index($days, $starting-day) + 1;
-$month-length: 28;
+$month-days: (
+  'monday':1,
+  'tuesday':2,
+  'wednesday':3,
+  'thursday':4,
+  'friday':5,
+  'saturday':6,
+  'sunday':7);
+$get-day: map.get($month-days, $starting-day);
+
 
 .container {
   font-family: Arial, Helvetica, sans-serif;
@@ -62,6 +72,10 @@ $month-length: 28;
   }
 }
 
-.container .block:nth-child(1) {
-  margin-left: calc(($block-size + 2 * $gap) * ($day-number - 1));
+@for $i from 0 through $get-day {
+  .block:nth-child(#{1}) {
+    margin-left: ($i - 1) * 102px;
+  }
 }
+
+
