correction according to comments

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: $day-font;
+  font-size: $day-text-size;
+}
+
 body {
   display: flex;
   justify-content: center;
