fix all comments

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,11 @@
+$hover-color: pink;
+$border-color: black;
+$bg-day-color: #eee;
 $square: 100px;
-$font-size: 0.3 * $square;
+$font-size: 30px;
 $indentations-size: 1px;
+$week-days: 7;
+$transition-duration: 0.5s;
 $days: "mon" 0,
 "tue" $square + $indentations-size,
 "wed" 2 * ($square + $indentations-size),
