--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -6,7 +6,7 @@
   padding: 10px;
   gap: 1px;
   height: 100vh;
-  width: $square * 7 + $indentations-size * 7;
+  width: $square * $week-days + $indentations-size * $week-days;
   margin: 0 auto;
 
   @each $start-day, $left-indentation in $days {
@@ -28,12 +28,11 @@
     width: $square;
     position: relative;
     cursor: pointer;
-    border: 1px solid #000;
-    background-color: #eee;
-    transition: 0.5s transform;
+    border: 1px solid $border-color;
+    background-color: $bg-day-color;
+    transition: transform $transition-duration;
 
     &::before {
-      font-family: Arial, Helvetica, sans-serif;
       font-size: $font-size;
       position: absolute;
       line-height: $square;
@@ -43,7 +42,7 @@
     }
 
     &:hover {
-      background-color: pink;
+      background-color: $hover-color;
       transform: translateY(-20px);
     }
 
