add variable for calendar backgroundcolor

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,7 +6,7 @@
 
   width: $day-size * $calendar-columns + $indentation-between-days * ($calendar-columns - 1) + $calendar-inline-paddings;
 
-  background-color: #fff;
+  background-color: $calendar-background-color;
 
   &--no-indentations {
     margin: 0;
