--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -20,3 +20,4 @@ $calendar-columns: 7;
 $calendar-inline-paddings: $calendar-paddings * 2;
 $calendar-block-paddings: $calendar-paddings * 2;
 $calendar-text-color: #000;
+$calendar-background-color: #fff;
