--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,12 @@
-$days: mon, tue, wed, thu, fri, sat, sun;
-$month-lengths: 28, 29, 30, 31;
-
-body {
-  margin: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
+@use "sass:list";
+@import './variables';
+@import './reset';
 
 .calendar {
   display: flex;
   flex-flow: row wrap;
   box-sizing: border-box;
-  gap: 1px 1px;
+  gap: $block-gap $block-gap;
   width: 706px;
   margin: 0 auto;
 
@@ -30,8 +24,8 @@ body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  width: 100px;
-  height: 100px;
+  width: $block-size;
+  height: $block-size;
   box-sizing: border-box;
   margin: 0;
   background-color: #eee;
@@ -39,29 +33,27 @@ body {
   transition-duration: 0.5s;
 
   &:hover {
-    background-color: pink;
-    transform: translateY(-20px);
+      background-color: pink;
+      transform: translateY(-20px);
   }
 
   @for $i from 1 through 31 {
-    &--#{$i} {
-      &:nth-child(#{$i}) {
-        display: flex;
-      }
+    &:nth-child(#{$i}) {
+      display: flex;
+    }
 
-      &:nth-child(n + #{$i + 1}) {
-        display: none;
-      }
+    &:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
 
-      &::before {
-        content: "#{$i}";
-      }
+    &:nth-child(#{$i})::before {
+      content: "#{$i}";
     }
   }
 
   @each $day in $days {
     &--#{$day} {
-      margin-left: (list.index($days, $day) - 1) * 101px;
+      margin-left: (list.index($days, $day) - 1) * ($block-size + $block-gap);
     }
   }
 }
