add normalize.scss, fix transition property, fix code style

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,6 +3,8 @@ $calendar-icon-height: 100px;
 $calendar-padding: 10px;
 $calendar-icon-gap: 1px;
 $calendar-width: ($calendar-icon-width * 7) + ($calendar-icon-gap * 6) + ($calendar-padding * 2);
+$calendar-icon-background-color: #eee;
+$calendar-icon-border-color: #000;
 $days: 'mon' 0,
   'tue' ($calendar-icon-width + $calendar-icon-gap),
   'wed' ($calendar-icon-width + $calendar-icon-gap) * 2,
