--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,23 +2,22 @@
   @include placement-center;
 
   display: flex;
+  width: $calendar-width;
   flex-wrap: wrap;
   gap: $calendar-icon-gap;
-
   padding: $calendar-padding;
-  width: $calendar-width;
 
   &__day {
     position: relative;
 
     width: $calendar-icon-width;
     height: $calendar-icon-height;
-    border: 1px solid black;
     box-sizing: border-box;
 
-    background-color: #eee;
+    background-color: $calendar-icon-background-color;
+    border: 1px solid $calendar-icon-border-color;
 
-    transition: all 0.5s;
+    transition: transform 0.5s;
 
     @for $date from 1 through 31 {
       &--#{$date}::before {
@@ -31,6 +30,7 @@
     &:hover {
       cursor: pointer;
       background-color: pink;
+
       transform: translateY(-20px);
     }
   }
