--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,11 @@
 $day-size: 100px;
 $day-gap: 1px;
 $block-padding: 10px;
+$days-count: 7;
+$gap-count: 6;
+$sides-count: 2;
 $calendar-block-color: #eee;
 $calendar-block-color-hover: pink;
 $color-border: black;
-$months: jan 31, feb 28, mar 31, apr 30, may 31, jun 30, jul 31, aug 31, sep 30, oct 31, nov 30, dec 31;
 $first-day: ('mon': 0, 'tue': 1, 'wed': 2, 'thu': 3, 'fri': 4, 'sat': 5, 'sun': 6);
 $transform-duration: 500ms;
