--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,22 +1,22 @@
-  html {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-  }
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
 
-  body {
-    justify-content: center;
-    display: flex;
-  }
+body {
+  justify-content: center;
+  display: flex;
+}
 
-  .calendar {
-    width: 7 * ($days-width + $calendar-gap) + 20; //20 --- padding left + right
+.calendar {
+    width: 7 * ($days-width + $calendar-gap) + $padding-days;
     display: flex;
     gap: 1px;
     flex-wrap: wrap;
     padding: 10px;
 
   &__number {
-    transition-duration: 0.5s;
+    transition-duration: $transition-duration;
     display: flex;
     justify-content: center;
     width: $days-width;
@@ -26,8 +26,8 @@
   }
 }
 
-  .calendar .calendar__number:hover {
-    transform: translateY(-20px);
-    cursor: pointer;
-    background: $days-hover-bgcolor;
-  }
+.calendar .calendar__number:hover {
+  transform: translateY(-20px);
+  cursor: pointer;
+  background: $days-hover-bgcolor;
+}
