--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,7 +1,8 @@
-  $days-width: 100px;
-  $days-heigth: 100px;
-  $days-bgcolor: #eee;
-  $days-hover-bgcolor: pink;
-  $days-border-color: black;
-  $calendar-gap: 1px;
-
+$days-width: 100px;
+$days-heigth: 100px;
+$days-bgcolor: #eee;
+$days-hover-bgcolor: pink;
+$days-border-color: black;
+$calendar-gap: 1px;
+$padding-days: 20;
+$transition-duration: 0.5s;
