--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,13 +1,3 @@
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-body {
-  justify-content: center;
-  display: flex;
-}
-
 .calendar {
     width: 7 * ($days-width + $calendar-gap) + $padding-days;
     display: flex;
@@ -23,11 +13,11 @@ body {
     height: $days-heigth;
     border: 1px solid $days-border-color;
     background: $days-bgcolor;
-  }
-}
 
-.calendar .calendar__number:hover {
-  transform: translateY(-20px);
-  cursor: pointer;
-  background: $days-hover-bgcolor;
+    &:hover {
+      transform: translateY(-20px);
+      cursor: pointer;
+      background: $days-hover-bgcolor;
+    }
+  }
 }
