fixed body issue

--- a/src/styles/blocks/resets.scss
+++ b/src/styles/blocks/resets.scss
@@ -3,10 +3,12 @@ html {
   font-size: 30px;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
+  justify-content: center;
+  display: flex;
+}
+
+* {
+  box-sizing: border-box;
 }
