--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,6 +1,13 @@
-body {
-  margin: 0;
+* {
   box-sizing: border-box;
+}
+
+html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
+}
+
+body {
+  margin: 0;
+
 }
