--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,4 @@ $days: mon, tue, wed, thu, fri, sat, sun;
 $month-lengths: 28, 29, 30, 31;
 $block-gap: 1px;
 $block-size: 100px;
+$transition-duration: 0.5s;
