remove .scss from import

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,7 +1,6 @@
 .calendar {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   gap: $block-gap $block-gap;
   width: 706px;
   margin: 0 auto;
