--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,19 @@
+$weekDays:
+  mon 0,
+  tue 1,
+  wed 2,
+  thu 3,
+  fri 4,
+  sat 5,
+  sun 6;
+
+$cellSize: 100;
+$gap: 1;
+
 * {
   box-sizing: border-box;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -7,12 +21,20 @@ body {
 }
 
 .calendar {
-  margin: 0 auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 726px;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  padding: 10px;
+
+  @each $name, $position in $weekDays {
+    &_start-day--#{$name} &__day:first-child {
+      margin-left: ($cellSize + $gap) * $position + px;
+    }
+  }
 
   &__day {
     background-color: #eee;
@@ -22,13 +44,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: Arial, sans-serif;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
-        font-size: 30px;
-        font-family: Arial, Helvetica, sans-serif;
       }
     }
 
@@ -40,19 +59,6 @@ body {
     }
   }
 
-}
-
-$days: ("mon": 101px, "tue": 202px, "wed": 303px,
-"thu": 404px, "fri": 505px, "sat": 606px, "sun": 707px);
-
-@each $day, $margin in $days {
-  .calendar_start-day--#{$day} {
-    .calendar__day {
-      &:first-child {
-        margin-left: $margin;
-      }
-    }
-  }
 }
 
 @for $index from 28 through 31 {
