--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -1,5 +1,9 @@
 @import '../styles/variables';
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -22,7 +26,6 @@ html {
   justify-content: center;
   font-size: 30px;
   border: 1px solid $border-color;
-  box-sizing: border-box;
   border-radius: 5px;
   transition: transform $transition-duration, background-color $transition-duration;
   cursor: pointer;
@@ -60,7 +63,7 @@ html {
 
 @for $i from 0 through $get-day {
   .list__cell:nth-child(#{1}) {
-    margin-left: ($i - 1) * 102px;
+    margin-left: ($i - 1) * ($block-size + 1.5) ;
   }
 }
 
