--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
-@import "utils/variables.scss";
+@import './utils/variables';
+@import './blocks/calendar';
 
-@import "blocks/calendar.scss";
-@import "blocks/start-day.scss";
-@import "blocks/month-length.scss";
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
