--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,63 @@
+$blockSize: 100px;
+$gap: 1px;
+$columnCount: 7;
+$padding: 10px;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: 100px auto;
+  padding: $padding;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: ($blockSize * $columnCount) + ($gap * $columnCount) + $padding;
+
+  &__block {
+    box-sizing: border-box;
+    cursor: pointer;
+    height: $blockSize;
+    width: $blockSize;
+    background-color: #eee;
+    border: 1px solid #000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 31px;
+    line-height: 100px;
+    text-align: center;
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+
+    @for $num from 1 through 31 {
+      &--#{$num}::before {
+        content: "#{$num}";
+      }
+    }
+
+    $startDays:
+      mon 0,
+      tue $blockSize + $gap,
+      wed ($blockSize + $gap) * 2,
+      thu ($blockSize + $gap) * 3,
+      fri ($blockSize + $gap) * 4,
+      sat ($blockSize + $gap) * 5,
+      sun ($blockSize + $gap) * 6;
+
+    @each $name, $margin in $startDays {
+      &--1--#{$name} {
+        margin-left: $margin;
+      }
+    }
+
+    @for $monthLength from 28 through 31 {
+      &--last:nth-child(#{$monthLength}) ~ & {
+        display: none;
+      }
+    }
+  }
 }
