--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,7 +39,7 @@ body {
       }
     }
 
-    $start-days: 
+    $start-days:
       mon 0,
       tue $block-size + $gap,
       wed ($block-size + $gap) * 2,
@@ -48,7 +48,7 @@ body {
       sat ($block-size + $gap) * 5,
       sun ($block-size + $gap) * 6;
 
-    @each $name, $margin in $startDays {
+    @each $name, $margin in $start-days {
       &--1--#{$name} {
         margin-left: $margin;
       }
