--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,63 +1,16 @@
-$block-size: 100px;
-$gap: 1px;
-$column-count: 7;
-$padding: 10px;
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
-}
-
-.calendar {
-  margin: 100px auto;
-  padding: $padding;
+  height: 100vh;
   display: flex;
-  flex-wrap: wrap;
-  gap: $gap;
-  width: ($block-size * $column-count) + ($gap * $column-count) + $padding;
-
-  &__block {
-    box-sizing: border-box;
-    cursor: pointer;
-    height: $block-size;
-    width: $block-size;
-    background-color: #eee;
-    border: 1px solid #000;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 31px;
-    line-height: 100px;
-    text-align: center;
-    transition: all 0.5s;
-
-    &:hover {
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-
-    @for $num from 1 through 31 {
-      &--#{$num}::before {
-        content: "#{$num}";
-      }
-    }
-
-    $start-days: 
-      mon 0,
-      tue $block-size + $gap,
-      wed ($block-size + $gap) * 2,
-      thu ($block-size + $gap) * 3,
-      fri ($block-size + $gap) * 4,
-      sat ($block-size + $gap) * 5,
-      sun ($block-size + $gap) * 6;
-
-    @each $name, $margin in $start-days {
-      &--1--#{$name} {
-        margin-left: $margin;
-      }
-    }
-
-    @for $monthLength from 28 through 31 {
-      &--last:nth-child(#{$monthLength}) ~ & {
-        display: none;
-      }
-    }
-  }
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
+
+@import "./utils/variables.scss";
+@import "./utils/calendar.scss";
