--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,5 +12,5 @@ body {
   font-size: 30px;
 }
 
-@import "./utils/variables.scss";
-@import "./utils/calendar.scss";
+@import "./utils/variables";
+@import "./utils/calendar";
