--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,66 @@
+$blocCorekWidth: 100px;
+$blocCorekHeight: 100px;
+$widthCalendar: ($blocCorekWidth * 7) + 10px;
+$days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+
+  padding: 10px;
+  gap: 1px;
+  width: $widthCalendar;
+
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
+
+  &__day {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+    height: $blocCorekHeight;
+    width: $blocCorekWidth;
+
+    background-color: #eee;
+    border: 1px solid #000000;
+    transition: transform 0.5s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #e3a0a0;
+      transform: translateY(-20px);
+    }
+
+    @for $number from 1 through 31 {
+      &:nth-child(#{$number})::before {
+        content: '#{$number}';
+      }
+    }
+  }
+
+  @each $day, $num in $days {
+    &--start-#{$day} &__day:first-child {
+      margin-left: ($blocCorekWidth + 1) * $num;
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &--month-length-#{$month-length}
+    &__day:nth-child(n + #{$month-length + 1}) {
+      display: none;
+    }
+  }
 }
