--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-$blocCorekWidth: 100px;
-$blocCorekHeight: 100px;
-$widthCalendar: ($blocCorekWidth * 7) + 10px;
+$bloc-core-width: 100px;
+$bloc-core-height: 100px;
+$width-calendar: ($bloc-core-width * 7) + 10px;
 $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
 body {
@@ -31,11 +31,11 @@ body {
     align-items: center;
 
     box-sizing: border-box;
-    height: $blocCorekHeight;
-    width: $blocCorekWidth;
+    height: $bloc-core-height;
+    width: $bloc-core-width;
 
     background-color: #eee;
-    border: 1px solid #000000;
+    border: 1px solid #000;
     transition: transform 0.5s ease-in-out;
 
     &:hover {
@@ -53,7 +53,7 @@ body {
 
   @each $day, $num in $days {
     &--start-#{$day} &__day:first-child {
-      margin-left: ($blocCorekWidth + 1) * $num;
+      margin-left: ($bloc-core-width + 1) * $num;
     }
   }
 
