add task solution

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,5 +4,5 @@ $days-in-row: 7;
 $background-color: #eee;
 $animation-duration: 0.5s;
 $hovered-color: pink;
-$start-day: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
+$start-day: 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
 $width: calc(($days-in-row * $cell-size) + ($days-in-row * $gap));
