--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,7 +62,9 @@ body {
 }
 
 @each $start-day, $shift in $days {
-  .calendar__day--#{$start-day} {
-    margin-left: $shift;
+  .calendar--#{$start-day} {
+    .calendar__day:nth-child(1) {
+      margin-left: $shift;
+    }
   }
 }
